...
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="swv-cN-40d">
            <objects>
                <windowController id="ucZ-RA-klf" sceneMemberID="viewController">
                    <window key="window" title="Export Options" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="GbI-8f-5WO">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="425" y="461" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
                        <connections>
                            <outlet property="delegate" destination="ucZ-RA-klf" id="8kF-DB-mOk"/>
...
                                    <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <button horizontalHuggingPriority="1000" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="g98-za-NYu">
                                <rect key="frame" x="30" y="252" width="49" height="18"/>
                                <buttonCell key="cell" type="check" title="@3x" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="G8x-4h-nDB">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="checkboxChanged:" target="0ac-sr-nUb" id="eWw-si-P0z"/>
                                </connections>
                            </button>
                            <button horizontalHuggingPriority="1000" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0t3-38-Bgn">
                                <rect key="frame" x="30" y="286" width="49" height="18"/>
                                <buttonCell key="cell" type="check" title="@2x" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="qWV-OR-jBs">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="checkboxChanged:" target="0ac-sr-nUb" id="dXN-gF-rVv"/>
                                </connections>
...
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Hsj-h3-rDJ">
                                <rect key="frame" x="583" y="13" width="104" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="92" id="Euv-eF-zqO"/>
                                </constraints>
                                <buttonCell key="cell" type="push" title="Export" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="MeZ-bZ-saU">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                                </buttonCell>
...
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YIQ-a0-CDq">
                                <rect key="frame" x="479" y="13" width="104" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="92" id="tuD-Od-7I6"/>
                                </constraints>
                                <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oYp-wb-EHU">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                                </buttonCell>
...
