...
                            </box>
                            <popUpButton toolTip="Sources are always packed in size-descending order." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Afg-ui-Ucn">
                                <rect key="frame" x="337" y="7" width="136" height="22"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="130" id="mHQ-56-QNI"/>
                                </constraints>
                                <popUpButtonCell key="cell" type="push" title="Name" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="rJx-dt-X7U" id="y7M-ja-oH3">
                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="smallSystem"/>
                                    <menu key="menu" id="3g5-f7-tom">
                                        <items>
                                            <menuItem title="Name" state="on" id="rJx-dt-X7U"/>
                                            <menuItem title="Size (Descending)" id="Epv-Aa-4Ev"/>
                                            <menuItem title="Size (Ascending)" id="cuc-oi-kMY"/>
                                        </items>
                                    </menu>
                                </popUpButtonCell>
                                <connections>
                                    <action selector="sortCriterionChanged:" target="FRj-th-ZQw" id="9Ct-A2-pJe"/>
                                </connections>
...
